--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "final_research_project"]
 	path = final_research_project
-	url = ./final_research_project
+	url = https://github.com/c-noonan-02/research_project_proposal/tree/main/audiomoth_survey_design
